# bot

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BLACKLIST_GUIDE.md  CODE_SCAN_SUMMARY.md  CONTRIBUTING.md  MAINTENANCE_COMPLETE_REPORT.md  MAINTENANCE_IMPLEMENTATION_GUIDE.md  MAINTENANCE_SUGGESTIONS.md  MANAGEMENT_USAGE.md  MESSAGE_LOGGER_README.md  README.md  bot.py  config.json  main.py  main_backup.py  pyproject.toml  requirements-dev.txt  requirements.txt  unlock_all_achievements.py
.github/: LAVALINK_NOTICE.md  copilot-instructions.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release.yml  security.yml
cogs/: achievements.py  admin.py  anti_spam.py  deep_sea_oxygen.py  developer.py  github_watch.py  message_logger.py  osu_info.py  russian_roulette.py  user_server_info.py
docs/: API-Reference.md  API.md  CI-CD.md  Configuration.md  DEPLOYMENT.md  DEVELOPMENT.md  Development-Guide.md  Home.md  Installation.md  Troubleshooting.md
osu_api/: app.py  requirements.txt
scripts/: LAVALINK_README.md  check_english_standards.py  deploy.py  migrate.py  unlock_all_achievements.py
scripts/lavalink/: README.md  application.yml.sample  docker-compose.yml  start-lavalink.ps1
services/github/: __init__.py  client.py
src/: __init__.py  bot.py  main.py
src/bot_types/: bot_types.py
src/cogs/: __init__.py
src/cogs/core/: __init__.py  admin.py  blacklist.py  bot_appearance.py  developer.py  error_handler.py  github_diagnostics.py  message_logger.py  performance_monitor.py  report.py  settings.py  system_maintenance.py
src/cogs/features/: __init__.py  achievements.py  anti_spam.py  economy.py  github_watch.py  giveaway.py  management.py  osu_info.py  ticket.py  user_server_info.py
src/cogs/games/: __init__.py  deep_sea_oxygen.py  russian_roulette.py
src/types/: __init__.py
src/utils/: anti_spam.py  api_optimizer.py  blacklist_manager.py  config_manager.py  config_optimizer.py  daily_manager.py  database_manager.py  economy_manager.py  github_manager.py  lavalink_node.py  logger.py  message_cache.py  network_optimizer.py
tests/: test_bot_startup.py
tests/test_cogs/: __init__.py
utils/: __init__.py  blacklist_manager.py  config_manager.py  logger.py
